--- a/Vanilla Weather App/src/style.css
+++ b/Vanilla Weather App/src/style.css
@@ -1,70 +1,105 @@
 body {
-    font-family: "Silkscreen", cursive;
-    font-size: 20px;
+    font-family: arial, sans-serif;
+    background-color:#FFCCBC;
 }
 
+
 h1 {
-    color: #ffd7d7;
-    font-size: 30px;
+    color: #FF5722;
+    font-size: 24px;
     font-weight: 100;
     line-height: 28px;
-    margin: 0;
+    margin-bottom: 0;
 }
 
 ul {
-    margin: 0 0 10px;
+    margin: 0;
     padding: 0;
 }
 
 li {
-    color: #ffd7d7;
-    font-size: 14px;
-    font-weight: 100;
-    height: 19px;
-    line-height: 1;
     list-style: none;
+    margin: 0;
+    padding: 0;
+
+    color: #FF5722;
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 19px;
+}
+
+li:first-letter {
+    text-transform: capitalize;
+}
+
+.weather-app-wrapper {
+    max-width: 700px;
+    margin: 40px auto;
+    background-color: white;
 }
 
 .weather-app {
-    border: 1px solid #dadde1;
-    padding: 15px;
-    margin: 20px auto;
-    border-radius: 10px;
-    max-width: 600px;
+    padding: 20px;
+    border: 1px solid #FF5722;
+    border-radius: 5px;
 }
 
-.weather-icon {
+.overview {
+    margin-bottom: 20px;
+}
+
+.weather-temperature img {
+    margin-right: 5px;
     height: 64px;
     width: 64px;
-    margin-right: 10px;
 }
 
-.temperature {
-    color: rgb(255, 255, 255);
-    font-size: 68px;
-    font-weight: 400;
+.weather-temperature strong {
+    color:#FF5722;
+    font-size: 64px;
     line-height: 1;
+    font-weight: 400;
 }
 
-.units {
+.weather-temperature .units {
     position: relative;
+    font-size: 16px;
     top: -34px;
-    color: rgb(255, 255, 255);
+    color: #FF5722;
 }
 
-.search-form {
-    margin-bottom: 60px;
+.weather-temperature .active {
+    color: #FF5722;
+    cursor: default;
 }
 
-.clouds {
-    width: 100%;
-    height: 150px;
+.weather-temperature .active:hover {
+    text-decoration: none;
 }
 
-body {
-    background-color: #a77fff;
-}
-
-p {
+.weather-forecast {
+    margin-top: 20px;
     text-align: center;
+    color: #FF5722;
+}
+
+.weather-forecast-date {
+    font-size: 16px;
+    opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+    opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+    font-size: 13px;
+    color: #FF5722;
+}
+
+
+img {
+    max-width: 600px;
+    display: block;
+    align-items: center;
 }
